--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -199,9 +199,9 @@ p {
 
 .logo-divider {
     display: inline-block;
-    width: 1px;
+    width: 3px;
     height: 20px;
-    background-color: var(--accent-color);
+    background-color: var(--text-nav);
     margin: 0 1.5rem;
     transition: margin 0.3s ease;
 }
